described token
